Fix the non-JS player overflowing to the side

--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -759,7 +759,7 @@ body.no-guide .app {
 
 .player-wrapper {
     background-color: #000;
-    height: 100%;
+    width: 100%;
     margin: auto;
 }
 
